# lvgl_test_ui

./: CMakeLists.txt  prj.conf
include/: display.h  ui_helpers.h
src/: main.c
src/modules/: CMakeLists.txt  display.c  ui_helpers.c
